# aps-gazette-public

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update_dataset.yml
data/: agency_crosswalk.csv  agency_lineage.csv  expectations.json  job_family_overrides.csv
docs/: CHANGELOG.md  data_dictionary.md  review-2026-07-addendum.md  review-2026-07.md  spec-review-findings.md
pipeline/: 01_download.py  02_parse.py  03_normalise.py  04_build_crosswalk.py  05_apply_crosswalk.py  06_build_release.py  07_clean_text.py  08_classify_job_family.py  09_check_coverage.py  r2_sync.py  release_io.py  validation.py
prompts/: job_family_system.txt  versions.json
