[project]
name = "aps-gazette"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "boto3>=1.28",
    "anthropic>=0.111.0",
    "python-dotenv>=1.2.2",
    "openpyxl>=3.1.5",
]

# System dependency (not pip-installable):
#   pdftotext — provided by poppler-utils
#   macOS:  brew install poppler
#   Ubuntu: apt install poppler-utils

[tool.uv]
package = false
